2007-2-11 Stuart Brorson <sdb@cloud9.net>
	* src/s_toplevel.c: Fixed bug I introduced at code sprint.
	
2007-02-10 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/listsort.c, src/s_string_list.c: Applied patch by DJ:
	[ 1637387 ] Enhance sort functions.  Thanks.

	* gattrib/src/globals.c, gattrib/src/i_basic.c, 
	gattrib/src/s_toplevel.c, gattrib/src/s_visibility.c, 
	gattrib/src/x_gtksheet.c, gattrib/src/x_window.c: Fixed a few 
	compiler warnings.  Removed quit_func since it is completely
	unused.

	* configure.ac: Bumped package version to 20070216.

2006-12-23 Carlos Nieves Onega <cnieves@iespana.es>

	* src/s_object.c (s_object_attrib_add_attrib_in_object):
	  Make o_selection_add call match the new selection interface.
	  The first argument should be a pointer to the selection list.
	  Thanks to Dan McMahill for reporting this.

2006-11-21 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Fixed libgeda detection/find error message when
        the wrong libgeda version is found. (Bug reported by Karel Kulhavy;
        thanks)

2006-10-29 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/s_object.c: Fixed compile error on glist_dev branch

2006-10-20 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped package version to 20061020.

2006-09-30 Stuart Brorson <sdb {AT} cloud9 {DOT} net>
	* src/s_toplevel.c: Set CHANGED flag when deleting attrib
	column so user is prompted when quitting before saving.
	
2006-09-27 Carlos Nieves Onega <cnieves@iespana.es>

	* configure.ac : Applied patch #1564796 by Cesar Strauss, 
	enabling Cygwin's compilation. Thanks.
	
2006-09-23  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/gattrib.c, src/s_toplevel.c: Adapted for new file selection
	dialog.

	* src/x_fileselect.c: Rewrite of the file selection dialog with a
	GtkFileChooser as in gschem.

2006-09-15 Stuart Brorson   <sdb (AT) cloud9 (DOT) net>
	* include/prototype.h, src/g_register.c, src/gattrib.c,
	src/x_dialog.c, src/x_gtksheet.c, src/x_window.c: